2.8: Python API: window's workspace can't be set in Application timer #71383

Closed
opened 2019-11-06 15:03:33 +01:00 by Ian Henderson · 5 comments

System Information
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel HD Graphics 5000 OpenGL Engine Intel Inc. 4.1 INTEL-12.10.12

Blender Version
Broken: version: 2.82 (sub 1), branch: master (modified), commit date: 2019-10-31 23:45, hash: c11d3c1b92
Worked: (optional)

Short description of error
In an app-level timer, trying to set the workspace on a window doesn't work. It looks like the call to WM_event_add_notifier in rna_Window_workspace_update always dispatches events to the context's current window rather than the Window object whose workspace attribute is being changed.

Exact steps for others to reproduce the error
Run this script in the Scripting workspace:

import bpy
def tick():
    bpy.context.window_manager.windows[0].workspace = bpy.data.workspaces['Shading']
    return 0
bpy.app.timers.register(tick)

Running the script does not switch workspaces to the Shading workspace. Calling the tick() function directly switches workspaces as expected.

**System Information** Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: Intel HD Graphics 5000 OpenGL Engine Intel Inc. 4.1 INTEL-12.10.12 **Blender Version** Broken: version: 2.82 (sub 1), branch: master (modified), commit date: 2019-10-31 23:45, hash: `c11d3c1b92` Worked: (optional) **Short description of error** In an app-level timer, trying to set the workspace on a window doesn't work. It looks like the call to `WM_event_add_notifier` in `rna_Window_workspace_update` always dispatches events to the context's current window rather than the `Window` object whose workspace attribute is being changed. **Exact steps for others to reproduce the error** Run this script in the Scripting workspace: ``` import bpy def tick(): bpy.context.window_manager.windows[0].workspace = bpy.data.workspaces['Shading'] return 0 bpy.app.timers.register(tick) ``` Running the script does not switch workspaces to the Shading workspace. Calling the `tick()` function directly switches workspaces as expected.
Author

Added subscriber: @ianh

Added subscriber: @ianh
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.

However you can use the workaround from #62074 (2.8: Python API: crash due to missing window context in Application timer) which is using an operator with custom context in the timer. This seems to work nicely:

import bpy

class TestOperator(bpy.types.Operator):
    bl_idname = "scene.test_operator"
    bl_label = "Test Operator"

    def execute(self, context):
        context.window.workspace = bpy.data.workspaces['Shading']
        return {'FINISHED'}

bpy.utils.register_class(TestOperator)

def tick():
    window = bpy.context.window_manager.windows[0]
    ctx = {'window': window, 'screen': window.screen}  
    bpy.ops.scene.test_operator(ctx)
    
    return 5.0

bpy.app.timers.register(tick)
Can confirm. However you can use the workaround from #62074 (2.8: Python API: crash due to missing window context in Application timer) which is using an operator with custom context in the timer. This seems to work nicely: ``` import bpy class TestOperator(bpy.types.Operator): bl_idname = "scene.test_operator" bl_label = "Test Operator" def execute(self, context): context.window.workspace = bpy.data.workspaces['Shading'] return {'FINISHED'} bpy.utils.register_class(TestOperator) def tick(): window = bpy.context.window_manager.windows[0] ctx = {'window': window, 'screen': window.screen} bpy.ops.scene.test_operator(ctx) return 5.0 bpy.app.timers.register(tick) ```
Philipp Oeser changed title from A window's workspace can't be set during app-level timer callbacks to 2.8: Python API: window's workspace can't be set in Application timer 2019-11-07 13:11:24 +01:00

This issue was referenced by bda6eb1e27

This issue was referenced by bda6eb1e27b8e2902b1336101f44a71a7be235c7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-18 10:03:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71383
No description provided.