Fix T71383: Error setting the windows workspaces from Python

Assigning window variables relied on notifiers that always used the
active window, no matter the window being assigned.

Pass the current window to the notifier.